[gd_scene load_steps=26 format=2]

[ext_resource path="res://scenes/miscs/WeatherManager/WeatherManager.gd" type="Script" id=1]
[ext_resource path="res://assets/2d/textures/water_rain.png" type="Texture" id=2]
[ext_resource path="res://assets/2d/textures/smoke.png" type="Texture" id=3]
[ext_resource path="res://assets/sounds/rain.wav" type="AudioStream" id=4]
[ext_resource path="res://scenes/miscs/WeatherManager/weater_cloudy.tres" type="Resource" id=5]
[ext_resource path="res://scenes/miscs/WeatherManager/weather_storm.tres" type="Resource" id=6]
[ext_resource path="res://scenes/miscs/WeatherManager/weater_clear.tres" type="Resource" id=7]
[ext_resource path="res://scenes/miscs/WeatherManager/NetWeatherSync.gd" type="Script" id=8]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0.540909 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]
curve = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 2
emission_box_extents = Vector3( 30, 1, 30 )
direction = Vector3( 0, -1, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 90.0
scale_random = 0.5
scale_curve = SubResource( 2 )

[sub_resource type="SpatialMaterial" id=4]
flags_unshaded = true
flags_do_not_receive_shadows = true
params_blend_mode = 1
params_depth_draw_mode = 1
params_billboard_mode = 2
albedo_color = Color( 0.776471, 0.909804, 1, 1 )
albedo_texture = ExtResource( 2 )

[sub_resource type="QuadMesh" id=5]
material = SubResource( 4 )
size = Vector2( 0.1, 5 )

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0, 0.493182 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
emission_shape = 2
emission_box_extents = Vector3( 30, 1, 30 )
direction = Vector3( 0, -1, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 90.0
initial_velocity_random = 0.6
linear_accel = 1.0
linear_accel_random = 1.0
scale_random = 1.0
scale_curve = SubResource( 7 )

[sub_resource type="SpatialMaterial" id=9]
flags_unshaded = true
flags_vertex_lighting = true
flags_do_not_receive_shadows = true
params_blend_mode = 1
params_depth_draw_mode = 1
params_billboard_mode = 2
albedo_color = Color( 0.776471, 0.909804, 1, 1 )
albedo_texture = ExtResource( 2 )

[sub_resource type="QuadMesh" id=10]
material = SubResource( 9 )
size = Vector2( 0.2, 1 )

[sub_resource type="Gradient" id=11]
offsets = PoolRealArray( 0, 0.324159, 0.746177, 1 )
colors = PoolColorArray( 0.496323, 0.496323, 0.496323, 0.496323, 1, 1, 1, 0.627451, 1, 1, 1, 0.627451, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=12]
gradient = SubResource( 11 )

[sub_resource type="Curve" id=13]
_data = [ Vector2( 0, 0.498864 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=14]
curve = SubResource( 13 )

[sub_resource type="ParticlesMaterial" id=15]
emission_shape = 2
emission_box_extents = Vector3( 10, 5, 10 )
direction = Vector3( 0.5, 1, 0.5 )
spread = 130.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 0.5
initial_velocity_random = 0.27
angular_velocity = 33.35
angular_velocity_random = 0.5
angle = 360.0
angle_random = 1.0
scale = 5.0
scale_random = 0.5
scale_curve = SubResource( 14 )
color_ramp = SubResource( 12 )

[sub_resource type="SpatialMaterial" id=16]
flags_transparent = true
flags_no_depth_test = true
flags_fixed_size = true
flags_do_not_receive_shadows = true
vertex_color_use_as_albedo = true
params_billboard_mode = 1
params_billboard_keep_scale = true
albedo_color = Color( 1, 1, 1, 0.478431 )
albedo_texture = ExtResource( 3 )

[sub_resource type="QuadMesh" id=17]
material = SubResource( 16 )

[node name="WeatherManager" type="Node"]
script = ExtResource( 1 )
weather_step0 = ExtResource( 7 )
weather_step1 = ExtResource( 5 )
weather_step2 = ExtResource( 6 )

[node name="Rain1" type="Particles" parent="."]
visible = false
amount = 512
visibility_aabb = AABB( -366.818, -193.944, -470.049, 733.635, 387.889, 940.097 )
local_coords = false
process_material = SubResource( 3 )
draw_pass_1 = SubResource( 5 )

[node name="Rain2" type="Particles" parent="."]
visible = false
amount = 128
visibility_aabb = AABB( -366.818, -193.944, -470.049, 733.635, 387.889, 940.097 )
local_coords = false
process_material = SubResource( 8 )
draw_pass_1 = SubResource( 10 )

[node name="Rain3" type="Particles" parent="."]
visible = false
lifetime = 3.0
randomness = 0.4
visibility_aabb = AABB( -232.501, -145.641, -328.179, 465.001, 291.281, 656.358 )
process_material = SubResource( 15 )
draw_pass_1 = SubResource( 17 )

[node name="RainSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true
bus = "SoundEffect"

[node name="NetWeatherSync" type="Node" parent="."]
script = ExtResource( 8 )
replication_enabled = false

[node name="Timer" type="Timer" parent="NetWeatherSync"]

[connection signal="timeout" from="NetWeatherSync/Timer" to="NetWeatherSync" method="sync_weather"]
